# manicscrobbler

./: Cargo.toml  README.md  flake.nix
.idx/: dev.nix
src/: main.rs
