[package]
name = "manicscrobbler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = "0.1.1"
rspotify = "0.13.2"
notion = "0.5.1"
sled = "0.34.7"
log = "0.4.22"
serde = "1.0.204"
sodium = "0.1.3" 